# gameIMSystem

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
client/: userClient.py
protocol/common/: BaseMsg.proto  SSMsg.proto  player.proto
protocol/gatesvr/: CSMsg.proto
protocol/loginsvr/: SSLoginMsg.proto
src/: CMakeLists.txt
src/gatesvr/: CMakeLists.txt  gate.cpp  gateServer.cpp  gateServer.h
src/gatesvr/action/: csLogin.cpp  csLogout.cpp
src/loginsvr/: CMakeLists.txt  loginServer.cpp  loginServer.h  loginsvr.cpp
src/loginsvr/action/: ssLogin.cpp  ssLogout.cpp
src/loginsvr/sdk/: sendLoginMsg.cpp  sendLoginMsg.h  sendLogoutMsg.cpp  sendLogoutMsg.h
src/util/: addressHelper.hpp  baseMsgHelper.cpp  baseMsgHelper.h  sendMsg.cpp  sendMsg.h  server.cpp  server.h  uuid.hpp
